--- a/regov_tech/backend/package.json
+++ b/regov_tech/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
-    "build": "tsc",
+    "build": "tsc && netlify deploy --prod",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,9 @@
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.2",
+    "netlify-cli": "^15.1.1",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "ts-node": "^10.9.1"
   }
 }
