--- a/regov_tech/backend/package.json
+++ b/regov_tech/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
-    "build": "tsc && netlify deploy --prod",
+    "build": "tsc && mkdir -p dist/functions && cp src/functions/* dist/functions/",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +28,7 @@
     "mongoose": "^7.1.2",
     "netlify-cli": "^15.1.1",
     "netlify-lambda": "^2.0.16",
+    "netlify-plugin-inline-functions-env": "^1.0.9",
     "serverless-http": "^3.2.0",
     "ts-node": "^10.9.1"
   }
