--- a/regov_tech/backend/package.json
+++ b/regov_tech/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts",
+    "start": "nodemon --exec ts-node src/server.ts",
     "build": "tsc && mkdir -p dist/functions && cp src/functions/* dist/functions/",
-    "dev": "nodemon index.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jwks-rsa": "^3.0.1",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.2",
     "netlify-cli": "^15.1.1",
